# gps

./: README.md
backend/: .gitignore  Cargo.toml  Dockerfile  INTEGRATION.md  README.md  compose.yaml  rofl.yaml
backend/src/: celo_verifier.rs  location_store.rs  main.rs  sapphire_client.rs
contracts/script/: DeployProofOfHuman.s.sol  deploy-proof-of-human.sh
frontend/: .env.example  CLAUDE.md  README.md  app.json  package-lock.json  package.json
frontend/app/: _layout.tsx  auth-callback.tsx  sign-in.tsx
frontend/app/(app)/: _layout.tsx  index.tsx
frontend/app/(app)/map/: index.tsx
frontend/app/(app)/settings/: index.tsx
frontend/components/: ctx.tsx
frontend/components/ui/: Button.tsx  LoadingSpinner.tsx  index.ts
frontend/constants/: mapConstants.ts
frontend/context/: FriendsContext.tsx  UserContext.tsx
frontend/hooks/: useStorageState.ts
frontend/services/: api.ts  auth.service.ts  index.ts  location.service.ts  user.service.ts
frontend/types/: index.ts  location.types.ts  map.types.ts  user.types.ts
frontend/utils/: getDistance.ts
